--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auction-service",
   "version": "1.0.0",
-  "description": "Codingly template for Serverless Framework projects",
+  "description": "updated template",
   "author": "Ariel Weinberger <ariel@codingly.io>",
   "license": "MIT",
   "devDependencies": {
